# Paddles_rs

./: Cargo.toml  LICENSE  README.md
asset_packer/: Cargo.toml
asset_packer/src/: aseprite.rs  aseprite_packer.rs  common.rs  font_packer.rs  image_packer.rs  main.rs
assets/: key_mapping.txt  key_mapping_debug.txt
assets/fonts/: fonts.ron
assets/images/: cursor_test.aseprite  more_tests.aseprite  test.aseprite  test_textured.aseprite
game_datatypes/: Cargo.toml
game_datatypes/src/: lib.rs
game_interface_glue/: Cargo.toml
game_interface_glue/src/: lib.rs
game_lib/: Cargo.toml
game_lib/src/: audio.rs  collision.rs  draw.rs  gui.rs  lib.rs  math.rs  scenes.rs  utility.rs
game_runtime/: Cargo.toml
game_runtime/src/: game_interface.rs  graphics.rs  input.rs  main.rs  timer.rs
game_runtime/src/shaders/: basic.glslf  basic.glslv
src/: main.rs
src/shaders/: basic.glslf  basic.glslv
