[package]
name = "asset_packer"
version = "0.1.0"
authors = ["Jakob Schwab <j.schwab@mail.de>"]

[dependencies]
rusttype = "0.6"
image = "0.19"
rect_packer = "0.2"
rand = "0.5"
serde = "1.0"
bincode = "1.0"
log = "0.4.3"
fern = "0.5.6"
failure = "0.1"
walkdir = "2.2"

[dependencies.game_lib]
path = "../game_lib"