[package]
name = "asset_packer"
version = "0.1.0"
authors = ["Jakob Schwab <j.schwab@mail.de>"]

edition = "2018"

[dependencies]
rusttype = "0.7"
image = "0.21"
rect_packer = "0.2"
rand = "0.6"
serde = "1.0"
bincode = "1"
serde_derive = "1.0"
serde_json ="1.0"
log = "0.4"
fern = "0.5"
failure = "0.1"
walkdir = "2.2"
inflate = "0.4"
ron = "0.4"
aseprite = "0.1"

[dependencies.game_lib]
path = "../game_lib"