[package]
name = "game_lib"
version = "0.1.0"
authors = ["Jakob Schwab <j.schwab@mail.de>"]

edition = "2018"

[dependencies]
cgmath = "0.17"
lodepng = "2"
rgb = "0.8"
serde = "1.0"
serde_derive = "1.0"
bincode = "1"
log = "0.4"
fern ="0.5"
failure = "0.1"
ron = "0.4"
time_calc = "0.13"
lewton = "0.9"
hound = "3.4"
sample = "0.10"

[lib]
crate-type = ["rlib","dylib"]