[package]
name = "game_runtime"
version = "0.1.0"
authors = ["Jakob Schwab <j.schwab@mail.de>"]

[dependencies]
cpal = "0.8"
gfx = "0.17"
gfx_window_glutin = "0.26"
glutin = "0.18"
rand = "0.5.5"
log = "0.4.5"
fern = "0.5.6"
libloading = "0.5"
failure = "0.1"
serde = "1.0"
serde_derive = "1.0"

[dependencies.game_lib]
path = "../game_lib"

