[package]
name = "game_runtime"
version = "0.1.0"
authors = ["Jakob Schwab <j.schwab@mail.de>"]

edition = "2018"

[dependencies]
cpal = "0.8"
gfx = "0.18"
gfx_window_sdl = "0.9"
sdl2 = "0.32"
rand = "0.6"
log = "0.4"
fern = "0.5"
libloading = "0.5"
failure = "0.1"
serde = "1.0"
serde_derive = "1.0"

[dependencies.game_lib]
path = "../game_lib"

